--- a/JinjaTemplate/templates/header.html
+++ b/JinjaTemplate/templates/header.html
@@ -27,7 +27,7 @@
                 <a href="#">SignIn</a>
             </li>
             <li>
-                <a href="#">Contact</a>
+                <a href="{% url 'contact' %}">Contact</a>
             </li>
         </ul>
     </nav>
