--- a/JinjaTemplate/templates/includes/products.html
+++ b/JinjaTemplate/templates/includes/products.html
@@ -2,4 +2,18 @@
 
 {% block content %}
 <h1>Products Page</h1>
+
+<div id="products">
+    <ul>
+        {% for data in products %}
+        <li>
+            <span>{{data.id}}</span>
+            <span>{{data.name}}</span>
+            <span>{{data.price}}</span>
+            <img src={{data.url}} height="150" width="100" alt="image">
+        </li>
+        {% endfor %}
+    </ul>
+</div>
+
 {% endblock %}
