--- a/SimpleForm/templates/index.html
+++ b/SimpleForm/templates/index.html
@@ -10,12 +10,21 @@
 
 <h1>Login from Django</h1>
 
-<form action="login/" method="post"> {% csrf_token %}
+<form action="/login/" method="post"> {% csrf_token %}
     <table>
         <tr>
-            <td>Enter Name</td>
+            <td>Enter Username</td>
             <td>
-                <input type="text" placeholder="Enter Name" name="username">
+                <input type="text" placeholder="Enter Username" name="username">
+            </td>
+            <td>
+                {% if errors %}
+                    <ul>
+                        {% for error in errors %}
+                        <li>{{error}}</li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
             </td>
         </tr>
         <tr>
