--- a/JinjaTemplate/templates/header.html
+++ b/JinjaTemplate/templates/header.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 {% load staticfiles %}
-
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'main.css' %}">
 </head>
 <body>
 
-<header id="header">
+<header id="header" class="navbar navbar-dark bg-primary">
+    <div class="container">
     <div class="logo">
         <a href="{% url 'index' %}">
-            <img src="" alt="logo">
+            <img src="{% static 'images/logo.png' %}" alt="logo">
         </a>
     </div>
     <nav id="main-nav">
@@ -31,11 +32,14 @@
             </li>
         </ul>
     </nav>
+    </div>
 </header>
 
 <div id="content">
-    {% block content %}
-    {% endblock %}
+    <div class="container">
+        {% block content %}
+        {% endblock %}
+    </div>
 </div>
 
 </body>
