--- a/JinjaTemplate/templates/header.html
+++ b/JinjaTemplate/templates/header.html
@@ -16,6 +16,13 @@
             <img src="{% static 'images/logo.png' %}" alt="logo">
         </a>
     </div>
+
+        <form class="form-inline" action="{% url 'searchProduct' %}" method="get">
+  <div class="form-group mx-sm-3 mb-2">
+    <input type="text" class="form-control" name="productName" id="inputPassword2" placeholder="Search Products">
+  </div>
+  <input type="submit" class="btn btn-warning mb-2" value="Search">
+</form>
     <nav id="main-nav">
         <ul>
             <li>
