--- a/twitter/templates/base.html
+++ b/twitter/templates/base.html
@@ -32,11 +32,19 @@
         <a class="nav-link" href="#">Entertainment</a>
       </li>
     </ul>
-      <a class="nav-link" href="{% url 'twitter:login' %}">Login</a>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+      <ul class="navbar-nav my-2 my-lg-0">
+          <li class="nav-item active">
+            <a class="nav-link" href="{% url 'twitter:login' %}">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'twitter:register' %}">Register</a>
+          </li>
+      </ul>
+
+    <!--<form class="form-inline my-2 my-lg-0">-->
+      <!--<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">-->
+      <!--<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
+    <!--</form>-->
   </div>
 </nav>
 
