--- a/twitter/templates/base.html
+++ b/twitter/templates/base.html
@@ -20,19 +20,28 @@
         <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Sports</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">News</a>
+        <a class="nav-link" href="{% url 'twitter:profile' %}">Profile</a>
       </li>
         <li class="nav-item">
-        <a class="nav-link" href="#">Music</a>
+        <a class="nav-link" href="{% url 'twitter:edit_profile' %}">Edit Profile</a>
       </li>
-        <li class="nav-item">
-        <a class="nav-link" href="#">Entertainment</a>
-      </li>
+      <!--<li class="nav-item">-->
+        <!--<a class="nav-link" href="#">Sports</a>-->
+      <!--</li>-->
+      <!--<li class="nav-item">-->
+        <!--<a class="nav-link" href="#">News</a>-->
+      <!--</li>-->
+        <!--<li class="nav-item">-->
+        <!--<a class="nav-link" href="#">Music</a>-->
+      <!--</li>-->
+        <!--<li class="nav-item">-->
+        <!--<a class="nav-link" href="#">Entertainment</a>-->
+      <!--</li>-->
     </ul>
       <ul class="navbar-nav my-2 my-lg-0">
+          <li class="nav-item active">
+            <a class="nav-link" href="{% url 'twitter:logout' %}">Logout</a>
+          </li>
           <li class="nav-item active">
             <a class="nav-link" href="{% url 'twitter:login' %}">Login</a>
           </li>
