--- a/twitter/templates/base.html
+++ b/twitter/templates/base.html
@@ -15,9 +15,10 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      {% if user.is_authenticated %}
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{% url 'twitter:index' %}">Home<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{% url 'twitter:profile' %}">Profile</a>
@@ -25,23 +26,20 @@
         <li class="nav-item">
         <a class="nav-link" href="{% url 'twitter:edit_profile' %}">Edit Profile</a>
       </li>
-      <!--<li class="nav-item">-->
-        <!--<a class="nav-link" href="#">Sports</a>-->
-      <!--</li>-->
-      <!--<li class="nav-item">-->
-        <!--<a class="nav-link" href="#">News</a>-->
-      <!--</li>-->
-        <!--<li class="nav-item">-->
-        <!--<a class="nav-link" href="#">Music</a>-->
-      <!--</li>-->
-        <!--<li class="nav-item">-->
-        <!--<a class="nav-link" href="#">Entertainment</a>-->
-      <!--</li>-->
+        <li class="nav-item">
+        <a class="nav-link" href="{% url 'twitter:change_password' %}">Change Password</a>
+      </li>
     </ul>
       <ul class="navbar-nav my-2 my-lg-0">
           <li class="nav-item active">
             <a class="nav-link" href="{% url 'twitter:logout' %}">Logout</a>
           </li>
+      </ul>
+      {% else %}
+        <ul class="navbar-nav mr-auto">
+
+        </ul>
+      <ul class="navbar-nav my-2 my-lg-0">
           <li class="nav-item active">
             <a class="nav-link" href="{% url 'twitter:login' %}">Login</a>
           </li>
@@ -49,6 +47,7 @@
             <a class="nav-link" href="{% url 'twitter:register' %}">Register</a>
           </li>
       </ul>
+      {% endif %}
 
     <!--<form class="form-inline my-2 my-lg-0">-->
       <!--<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">-->
