--- a/twitter/templates/base.html
+++ b/twitter/templates/base.html
@@ -5,11 +5,12 @@
     <title>Title</title>
     {% load staticfiles %}
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'stylesheets/main.css' %}">
 </head>
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="{% url 'twitter:index' %}">Twitter</a>
+  <a class="navbar-brand" href="{% url 'home:index' %}">Twitter</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -18,7 +19,7 @@
       {% if user.is_authenticated %}
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="{% url 'twitter:index' %}">Home<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{% url 'home:index' %}">Home<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{% url 'twitter:profile' %}">Profile</a>
